// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  <Memo(ForwardRef(MapIcon)) />
  地図
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests left align 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "left",
    }
  }
>
  <Memo(ForwardRef(MapIcon)) />
  地図
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests right icon 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  地図
  <Memo(ForwardRef(MapIcon)) />
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests with link 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "normal",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  <NonStyleLink
    to="./"
  >
    <Memo(ForwardRef(MapIcon)) />
  </NonStyleLink>
  <NonStyleLink
    to="./"
  >
    地図
  </NonStyleLink>
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests with onClick 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  <span
    onClick={[Function]}
  >
    <Memo(ForwardRef(MapIcon)) />
  </span>
  <span
    onClick={[Function]}
  >
    地図
  </span>
</ForwardRef(Typography)>
`;
